@@ -72,7 +72,6 @@ import org.apache.qpid.jms.provider.amqp.message.AmqpJmsTextMessageFacade;
 import org.apache.qpid.proton.amqp.Symbol;
 import org.assertj.core.api.ThrowableAssert;
 import org.awaitility.Awaitility;
-import org.awaitility.Duration;
 import org.eclipse.ditto.model.base.common.DittoConstants;
 import org.eclipse.ditto.model.base.headers.DittoHeaders;
 import org.eclipse.ditto.model.connectivity.Connection;
@@ -91,9 +90,8 @@ import org.eclipse.ditto.protocoladapter.TopicPath;
 import org.eclipse.ditto.services.connectivity.messaging.AbstractBaseClientActorTest;
 import org.eclipse.ditto.services.connectivity.messaging.TestConstants;
 import org.eclipse.ditto.services.connectivity.messaging.TestConstants.Authorization;
+import org.eclipse.ditto.services.utils.pubsub.DittoProtocolSub;
 import org.eclipse.ditto.services.models.connectivity.BaseClientState;
-import org.eclipse.ditto.services.models.connectivity.OutboundSignal;
-import org.eclipse.ditto.services.models.connectivity.OutboundSignalFactory;
 import org.eclipse.ditto.services.utils.test.Retry;
 import org.eclipse.ditto.signals.commands.base.Command;
 import org.eclipse.ditto.signals.commands.base.CommandResponse;
@@ -148,7 +146,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     @Mock
     private final JmsConnection mockConnection = Mockito.mock(JmsConnection.class);
     private final JmsConnectionFactory jmsConnectionFactory =
-            (connection1, exceptionListener, connectionLogger) -> mockConnection;
+            (c, e, l, i) -> mockConnection;
     @Mock
     private final JmsSession mockSession = Mockito.mock(JmsSession.class);
     @Mock
@@ -167,6 +165,8 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
                 .toBuilder()
                 .connectionStatus(ConnectivityStatus.CLOSED)
                 .build();
+        // instantiate the pubsub extension now to prevent flapping tests due to the delay
+        DittoProtocolSub.get(actorSystem);
     }
 
     @AfterClass
@@ -240,7 +240,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
         new TestKit(actorSystem) {{
             final Props props =
                     AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (theConnection, exceptionListener, connectionLogger) -> {
+                            (c, e, l, i) -> {
                                 throw JMS_EXCEPTION;
                             });
             final ActorRef connectionActor = actorSystem.actorOf(props);
@@ -257,8 +257,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
             final TestProbe aggregator = new TestProbe(actorSystem);
 
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (connection1, exceptionListener, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
             watch(amqpClientActor);
 
@@ -280,8 +279,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     public void testReconnect() {
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (connection1, exceptionListener, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
             watch(amqpClientActor);
 
@@ -308,8 +306,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
             final TestProbe aggregator = new TestProbe(actorSystem);
 
             final Props props =
-                    AmqpClientActor.propsForTests(connection,
-                            getRef(), getRef(), (connection1, exceptionListener, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
             watch(amqpClientActor);
 
@@ -348,9 +345,8 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     public void sendCommandDuringInit() {
         new TestKit(actorSystem) {{
             final CountDownLatch latch = new CountDownLatch(1);
-            final Props props =
-                    AmqpClientActor.propsForTests(connection,
-                            getRef(), getRef(), (ac, el, cl) -> waitForLatchAndReturn(latch, mockConnection));
+            final Props props = AmqpClientActor.propsForTests(connection, getRef(), getRef(),
+                    (c, e, l, i) -> waitForLatchAndReturn(latch, mockConnection));
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
             watch(amqpClientActor);
 
@@ -366,8 +362,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     public void sendConnectCommandWhenAlreadyConnected() throws JMSException {
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -385,8 +380,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     public void sendDisconnectWhenAlreadyDisconnected() {
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(),
-                            getRef(), (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(CloseConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -400,8 +394,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
         new TestKit(actorSystem) {{
             doThrow(JMS_EXCEPTION).when(mockConnection).start();
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(),
-                            getRef(), (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -414,8 +407,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
         new TestKit(actorSystem) {{
             when(mockConnection.createSession(anyInt())).thenThrow(JMS_EXCEPTION);
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(),
-                            getRef(), (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -429,8 +421,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
             doReturn(mockSession).when(mockConnection).createSession(anyInt());
             when(mockSession.createConsumer(any())).thenThrow(JMS_EXCEPTION);
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(),
-                            getRef(), (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -443,8 +434,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
         new TestKit(actorSystem) {{
             doThrow(JMS_EXCEPTION).when(mockConnection).close();
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(),
-                            getRef(), (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -471,8 +461,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
 
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             // connect
@@ -564,8 +553,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
 
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -629,8 +617,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
 
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -673,24 +660,27 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
                         TopicPath.Channel.TWIN.getName();
 
         new TestKit(actorSystem) {{
+            final Connection connectionWithTarget = connection.toBuilder()
+                    .setTargets(List.of(
+                            ConnectivityModelFactory.newTargetBuilder()
+                                    .address(TestConstants.Targets.TARGET_WITH_PLACEHOLDER.getAddress())
+                                    .authorizationContext(Authorization.AUTHORIZATION_CONTEXT)
+                                    .topics(Topic.TWIN_EVENTS)
+                                    .build()
+                    ))
+                    .build();
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connectionWithTarget, getRef(), getRef(),
+                            (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
             expectMsg(CONNECTED_SUCCESS);
 
-            final ThingModifiedEvent thingModifiedEvent = TestConstants.thingModified(Collections.emptyList());
+            final ThingModifiedEvent<?> thingModifiedEvent =
+                    TestConstants.thingModified(Authorization.AUTHORIZATION_CONTEXT.getAuthorizationSubjects());
 
-            final OutboundSignal outboundSignal = OutboundSignalFactory.newOutboundSignal(thingModifiedEvent,
-                    singletonList(ConnectivityModelFactory.newTargetBuilder()
-                            .address(TestConstants.Targets.TARGET_WITH_PLACEHOLDER.getAddress())
-                            .authorizationContext(Authorization.AUTHORIZATION_CONTEXT)
-                            .topics(Topic.TWIN_EVENTS)
-                            .build()));
-
-            amqpClientActor.tell(outboundSignal, getRef());
+            amqpClientActor.tell(thingModifiedEvent, getRef());
 
             final ArgumentCaptor<JmsMessage> messageCaptor = ArgumentCaptor.forClass(JmsMessage.class);
             final MessageProducer messageProducer = getProducerForAddress(expectedAddress);
@@ -706,7 +696,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
         final Target target = TestConstants.Targets.TWIN_TARGET;
         new TestKit(actorSystem) {{
             final Props props = AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                    (ac, el, connectionLogger) -> mockConnection);
+                    (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(OpenConnection.of(CONNECTION_ID, DittoHeaders.empty()), getRef());
@@ -721,7 +711,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
         new TestKit(actorSystem) {{
             final Props props =
                     AmqpClientActor.propsForTests(singleConsumerConnection(), getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                            (c, e, l, i) -> mockConnection);
             final TestActorRef<AmqpClientActor> amqpClientActorRef = TestActorRef.apply(props, actorSystem);
             final AmqpClientActor amqpClientActor = amqpClientActorRef.underlyingActor();
 
@@ -837,8 +827,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     public void testTestConnection() {
         new TestKit(actorSystem) {{
             final Props props =
-                    AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                            (ac, el, connectionLogger) -> mockConnection);
+                    AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
             final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
             amqpClientActor.tell(TestConnection.of(connection, DittoHeaders.empty()), getRef());
@@ -854,8 +843,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
                 when(mockConnection.createSession(anyInt()))
                         .thenAnswer(invocationOnMock -> waitForLatchAndReturn(latch, mockSession));
                 final Props props =
-                        AmqpClientActor.propsForTests(connection, getRef(), getRef(),
-                                (ac, el, connectionLogger) -> mockConnection);
+                        AmqpClientActor.propsForTests(connection, getRef(), getRef(), (c, e, l, i) -> mockConnection);
                 final ActorRef amqpClientActor = actorSystem.actorOf(props);
 
                 amqpClientActor.tell(TestConnection.of(connection, DittoHeaders.empty()), getRef());
@@ -895,8 +883,7 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
 
     @Override
     protected Props createClientActor(final ActorRef proxyActor, final Connection connection) {
-        return AmqpClientActor.propsForTests(connection, proxyActor, connectionActor,
-                (ac, el, connectionLogger) -> mockConnection);
+        return AmqpClientActor.propsForTests(connection, proxyActor, connectionActor, (c, e, l, i) -> mockConnection);
     }
 
     @Override
@@ -916,12 +903,14 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
             throws JMSException {
 
         final String uuid = UUID.randomUUID().toString();
-        final ThingModifiedEvent thingModifiedEvent =
-                TestConstants.thingModified(Collections.emptyList(), Attributes.newBuilder().set("uuid", uuid).build())
-                        .setDittoHeaders(DittoHeaders.newBuilder().putHeader("reply-to", target.getAddress()).build());
-        final OutboundSignal outboundSignal =
-                OutboundSignalFactory.newOutboundSignal(thingModifiedEvent, singletonList(target));
-        amqpClientActor.tell(outboundSignal, ActorRef.noSender());
+        final ThingModifiedEvent<?> thingModifiedEvent =
+                TestConstants.thingModified(List.of(), Attributes.newBuilder().set("uuid", uuid).build())
+                        .setDittoHeaders(DittoHeaders.newBuilder()
+                                .putHeader("reply-to", target.getAddress())
+                                .readGrantedSubjects(target.getAuthorizationContext().getAuthorizationSubjects())
+                                .build());
+
+        amqpClientActor.tell(thingModifiedEvent, ActorRef.noSender());
 
         final ArgumentCaptor<JmsMessage> messageCaptor = ArgumentCaptor.forClass(JmsMessage.class);
         final MessageProducer messageProducer = messageProducerSupplier.get();
@@ -943,8 +932,8 @@ public final class AmqpClientActorTest extends AbstractBaseClientActorTest {
     private MessageProducer getProducerForAddress(final String address) {
         // it may take some time until the producers have been created
         return Awaitility.await()
-                .atMost(Duration.TWO_SECONDS)
-                .pollInterval(Duration.TWO_HUNDRED_MILLISECONDS)
+                .atMost(org.awaitility.Duration.TWO_SECONDS)
+                .pollInterval(org.awaitility.Duration.TWO_HUNDRED_MILLISECONDS)
                 .until(() -> mockProducers.stream()
                         .filter(p -> address.equals(wrapThrowable(p::getDestination).toString()))
                         // we only want the latest producer (required to test session recovery)
